order-msg-view-update

--- a/cropapp/templates/admin/adminbasee.html
+++ b/cropapp/templates/admin/adminbasee.html
@@ -46,16 +46,16 @@
 	          <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="Orders" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Orders</a>
               <div class="dropdown-menu" aria-labelledby="dropdown04">
-              	<a class="dropdown-item" href="/ViewOrders">View Orders</a>
+              	<a class="dropdown-item" href="/orderdetail/">View Orders</a>
 
-              	<a class="dropdown-item" href="/ViewFinished">View Finished Orders</a>
+              	<a class="dropdown-item" href="/viewOldOrders">View Finished Orders</a>
               </div>
 
             </li>
 
 	          <li class="nav-item"><a href="/managecrops" class="nav-link">Crops</a></li>
             <li class="nav-item"><a href="/userdetails/" class="nav-link">View Users</a></li>
-            <li class="nav-item"><a href="/msg" class="nav-link">Messages</a></li>
+            <li class="nav-item"><a href="/adViewMessages/" class="nav-link">Messages</a></li>
 	          <li class="nav-item"><a href="/aboutadmin" class="nav-link">About</a></li>
 
             <li class="nav-item dropdown">
@@ -64,7 +64,7 @@
                 <a class="dropdown-item" href="orderhistory">Order History</a>
                 <a class="dropdown-item" href="changeaddress">Change Address</a>
                 <a class="dropdown-item" href="/updateadminpass">Change Password</a>
-                <a class="dropdown-item" href="/adminlogout">LogOut</a>
+                <a class="dropdown-item" href="/logout">LogOut</a>
               </div>
             </li>
             
