--- a/cropapp/templates/user/buynow.html
+++ b/cropapp/templates/user/buynow.html
@@ -95,6 +95,164 @@
     </table>
 </form>
 
+
+<!-- <section class="ftco-section ftco-cart">
+    <form action="/placeorder/" method="post">
+        {% csrf_token %}
+    <div class="container">
+        <div class="row">
+        <div class="col-md-12 ftco-animate">
+            <div class="cart-list">
+                <table class="table">
+                    <thead class="thead-primary">
+                      <tr class="text-center">
+                    
+                        <th>Product Details</th>
+                      </tr>
+                    
+                    </thead>
+                
+
+                  </table>
+              </div>
+        </div>
+    </div>
+    </div>
+<div class="container">
+        <div class="row">
+        <div class="col-md-12 ftco-animate">
+            <div class="cart-list">
+                <table class="table">
+                    <tbody>
+                        <tr class="text-center">
+                            <th> Product Id </th>
+                            <th> <input type="text" value="{{pro.pid}}" readonly></th>
+                        </tr>
+                        <tr class="text-center">
+                            <th> Product Name </th>
+                            <th> <input type="text" value="{{pro.pname}}" readonly></th>
+                        </tr>
+                        <tr class="text-center">
+                            <th> Quantity</th>
+                            <th> <input type="text" value="{{q1}}" readonly></th>
+                        </tr>
+                        <tr class="text-center">
+                            <th> Price </th>
+                            <th> <input type="text" value="{{pro.price}}" readonly></th>
+                        </tr>    
+                    
+                    </tbody>
+
+                  </table>
+              </div>
+        </div>
+    </div>
+    </div>
+<div class="container">
+        <div class="row">
+        <div class="col-md-12 ftco-animate">
+            <div class="cart-list">
+                <table class="table">
+                    <thead class="thead-primary">
+                      <tr class="text-center">
+                    
+                        <th>Delivery Details</th>
+                      </tr>
+                   
+                    </thead>
+                    <tbody>
+      
+                    </tbody>
+
+                  </table>
+              </div>
+        </div>
+    </div>
+    </div>
+<div class="container">
+        <div class="row">
+        <div class="col-md-12 ftco-animate">
+            <div class="cart-list">
+                <table class="table">
+                    <tbody>
+                        <tr class="text-center">
+                            <th> First Name </th>
+                            <th> <input type="text" name="fname"/></th>
+                        </tr>
+                        <tr class="text-center">
+                            <th> Last Name </th>
+                            <th> <input type="text" name="lname" /></th>
+                        </tr>
+                        <tr class="text-center">
+                            <th> Address Line 1 </th>
+                            <th> <input type="text" name="add1" maxlength="20" /></th>
+                        </tr>
+                        <tr class="text-center">
+                            <th> Address Line 2 </th>
+                            <th> <input type="text" name="add2" maxlength="20" /></th>
+                        </tr>
+                        <tr class="text-center">
+                            <th> Address Line 3 </th>
+                            <th> <input type="text" name="add3" maxlength="20" /></th>
+                        </tr>
+                        <tr class="text-center">
+                            <th> Phone Number </th>
+                            <th> <input type="text" name="ph" maxlength="10" /></th>
+                        </tr>
+    
+                    </tbody>
+
+                  </table>
+              </div>
+        </div>
+    </div>
+    </div>
+<div class="container">
+        <div class="row">
+        <div class="col-md-12 ftco-animate">
+            <div class="cart-list">
+                <table class="table">
+                    <thead class="thead-primary">
+                      <tr class="text-center">
+                    
+                        <th>Payment Details</th>
+                      </tr>  
+                    </thead>
+                  </table>
+              </div>
+        </div>
+    </div>
+    </div>
+<div class="container">
+        <div class="row">
+        <div class="col-md-12 ftco-animate">
+            <div class="cart-list">
+                <table class="table">
+                    <tbody>
+                    <tr class="text-center">
+                        <th> Card Amount </th>
+                        <th> <input type="text" name="card" /></th>
+                    </tr>
+                    <tr class="text-center">
+                        <th> CVV  </th>
+                        <th> <input type="text" name="cvv" maxlength="3" /></th>
+                    </tr>
+                    <tr class="text-center">
+                        <th> Total Amount</th>
+                        <th> <input type="number" id="p2" name="total" value="{{total}}" readonly /></th>
+                    </tr>
+                    <tr class="text-center">
+                        <input type="submit" value="Proceed to Pay" />
+                    </tr>
+                    <!-- <input type="submit" value="Proceed to Pay" /> -->
+                  </tbody>
+                  </table>
+              </div>
+        </div>
+    </div>
+    </div>
+    </form>
+</section> -->
 <!-- <script>
     function getprice()
      {
