--- a/cropapp/templates/user/userbase.html
+++ b/cropapp/templates/user/userbase.html
@@ -46,7 +46,7 @@
 	          <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="Orders" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Orders</a>
               <div class="dropdown-menu" aria-labelledby="dropdown04">
-              	<a class="dropdown-item" href="/ViewOrders">View Orders</a>
+              	<a class="dropdown-item" href="/orderDetails/">View Orders</a>
 
               	<a class="dropdown-item" href="/ViewFinished">View Finished Orders</a>
               </div>
@@ -66,7 +66,7 @@
   
 	          <li class="nav-item"><a href="/managecrops" class="nav-link">Crops</a></li>
             <!-- <li class="nav-item"><a href="/msg" class="nav-link">Messages</a></li> -->
-            <li class="nav-item cta cta-colored"><a href="/message" class="nav-link"><span class="icon-envelope"></span><label id="cartcount">[]</label></a></li>
+            <li class="nav-item cta cta-colored"><a href="/messagetoAdmin/" class="nav-link"><span class="icon-envelope"></span><label id="cartcount">[]</label></a></li>
 
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="shop" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hey ,{{ user.fname}}{{user.lname}}!</a>
